Fix styling so that homepage elements do not overlap by setting a min width

--- a/query/app/assets/stylesheets/api/questions.scss
+++ b/query/app/assets/stylesheets/api/questions.scss
@@ -267,10 +267,6 @@
   text-decoration: underline;
 }
 
-.question-index-answer {
-  margin-right: 100px;
-}
-
 #question-show-answer-btn {
   cursor: pointer;
 }
