--- a/query/app/assets/stylesheets/components/homepage.scss
+++ b/query/app/assets/stylesheets/components/homepage.scss
@@ -1,7 +1,6 @@
 .feeds-container {
     width: 142px;
     height: 328px;
-    min-height: 1px;
     margin-left: 30px;
     font-size: 13px;
     position: fixed;
@@ -10,6 +9,7 @@
 .home-page-container {
   overflow: auto;
   background: #fafafa;
+  min-width: 1000px;
 }
 
 .feeds-title {
